# openclaw-witness-asset-price-oracle

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  go-announcer.sh  install.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: python-test.yml
skills/: __init__.py
skills/witness_asset_oracle/: __init__.py  asset_oracle_engine.py  config.py  logic.py  manifest.yaml  marketplace_fingerprint.py  multi_rpc_provider.py  telegram_reporter.py
skills/witness_btc_price_oracle/: __init__.py  binohash.py  config.py  logic.py  manifest.yaml  multi_rpc_provider.py  telegram.py  utxoracle.py  utxoracle_engine.py
src/: announcer_wrapper.py
tests/: __init__.py  diagnose_trades.py  dump_witness.py  simulate_telegram.py  test_binohash.py  test_utxoracle_engine.py
tests/manual_audit/: audit_historical_trades.py  rescan_block_941338.py
